<resources>
    <string name="app_name">粮易通</string>
    <string name="regist_second_label">注册</string>
    <string name="regist_first_name">真实姓名</string>
    <string name="regist_first_name_hint">请输入真实姓名</string>
    <string name="regist_first_id_card">身份证号</string>
    <string name="regist_first_id_card_hint">请输入真实身份证号码</string>
    <string name="regist_first_type">客户类型</string>
    <string name="regist_first_id_card_up">上传身份证照片（仅用于个人认证）</string>
    <string name="regist_first_id_card_front">身份证正面照片</string>
    <string name="regist_first_id_card_behind">身份证反面照片</string>
    <string name="regist_first_next">下一步</string>
    <string name="tab_home_label">首页</string>
    <string name="tab_my_quote_label">我的报价</string>
    <string name="tab_barge_manage_label">驳船管理</string>
    <string name="tab_my_label">我的</string>
    <string name="waitQuote_label">待报价</string>
    <string name="quoted_label">已报价</string>
    <string name="sucess_label">已成交</string>
    <string name="start_quote_label">我要报价</string>
    <string name="ask_start_quote_label">确认要报价吗？</string>
    <string name="my_start_quote_label">我的报价</string>
    <string name="regist_first_label">个人认证</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="modify_password_title">修改密码</string>
    <string name="forget_password_button_label">完成</string>
    <string name="message_dialog_is_opend">标为已读</string>
    <string name="message_dialog_not_opend">标为未读</string>
    <string name="message_dialog_remove">移除</string>
    <string name="message_top_category_label_open">∧</string>
    <string name="message_top_category_label_close">∨</string>
    <string name="barge_detail_title">驳船详情</string>
    <string name="barge_add_title">新增驳船</string>
    <string name="bargecabin_add_title">新增船舱</string>
    <string name="barge_edit_title">编辑驳船信息</string>
    <string name="barge_delete">删除驳船</string>
    <string name="barge_cabin_manage">编辑船舱信息</string>
    <string name="barge_commit">提交</string>
    <string name="barge_cabin_commit">提交</string>
    <string name="barge_cabin_delete">删除</string>
    <string name="settings_title">设置</string>
    <string name="my_info_title">完善资料</string>
    <string name="my_info_popup_title">请保持上传照片字迹清晰，无遮拦，无反光。</string>
    <string name="take_photo">拍照</string>
    <string name="upload_photo">上传图片</string>
    <string name="cancel">取消</string>
    <string name="already_upload">已上传</string>
    <string name="not_upload">未上传</string>
    <string name="uploading">图像信息识别中</string>
    <string name="agree_text1">阅读并同意</string>
    <string name="agree_text2">《用户协议》</string>
    <string name="agree_title">用户协议</string>
    <string name="register_warning_msg">请完善相关的信息或同意使用协议</string>
    <string name="hatchnum">舱口号</string>
    <string name="holdcapacity">舱容</string>
    <string name="hatchsize">舱口尺寸</string>
    <string name="choose_barge_label">选择驳船</string>
    <string name="quote_ton_label">报价吨位</string>
    <string name="quote_price_label">报价价格</string>
    <string name="already_quote_price_label">报价时间</string>
    <string name="success_quote_price_label">成交时间</string>
    <string name="already_quote_detail_title">报价详情</string>
    <string name="createtime">注册时间</string>
    <string name="bargename">船名</string>
    <string name="nationality">船籍</string>
    <string name="length">船长</string>
    <string name="width">船宽</string>
    <string name="builttime">建造时间</string>
    <string name="grosston">总吨位</string>
    <string name="netTon">净吨位</string>
    <string name="deadweightton">载重吨位</string>
    <string name="picture">船照片</string>
    <string name="shipcertificatepicture">船舶证书</string>
</resources>