<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@android:color/darker_gray" />

    <!--<android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></android.support.v4.view.ViewPager>-->

    <com.chaychan.library.BottomBarLayout
        android:id="@+id/bbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/white"
        android:paddingBottom="@dimen/bottombar_padding"
        android:paddingTop="@dimen/bottombar_padding"
        >

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/ic_home_off"
            app:iconSelected="@mipmap/ic_home_on"
            app:itemText="@string/tab_home_label"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorPrimary"
            app:itemTextSize="@dimen/bottombar_item_text_size"
            app:itemMarginTop="@dimen/bottombar_item_margin_top"
            />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/ic_quote_off"
            app:iconSelected="@mipmap/ic_quote_on"
            app:itemText="@string/tab_my_quote_label"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorPrimary"
            app:itemTextSize="@dimen/bottombar_item_text_size"
            app:itemMarginTop="@dimen/bottombar_item_margin_top"
            />



        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/ic_barge_off"
            app:iconSelected="@mipmap/ic_barge_on"
            app:itemText="@string/tab_barge_manage_label"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorPrimary"
            app:itemTextSize="@dimen/bottombar_item_text_size"
            app:itemMarginTop="@dimen/bottombar_item_margin_top"
            />

        <!--<com.chaychan.library.BottomBarItem-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="match_parent"-->
            <!--app:iconNormal="@mipmap/tab_barge_normal48"-->
            <!--app:iconSelected="@mipmap/tab_barge_selected48"-->
            <!--app:itemText=""-->
            <!--app:textColorNormal="@color/tab_normal_color"-->
            <!--app:textColorSelected="@color/colorPrimary"-->
            <!--app:itemTextSize="@dimen/bottombar_item_text_size"-->
            <!--app:itemMarginTop="@dimen/bottombar_item_margin_top"-->
            <!--/>-->

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/ic_preson_off"
            app:iconSelected="@mipmap/ic_personal_on"
            app:itemText="@string/tab_my_label"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorPrimary"
            app:itemTextSize="@dimen/bottombar_item_text_size"
            app:itemMarginTop="@dimen/bottombar_item_margin_top"
            />

    </com.chaychan.library.BottomBarLayout>
</LinearLayout>