<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="8dip"
                android:text="@string/hatchnum"
                android:textColor="@color/black_33"
                android:textSize="@dimen/main_text_size" />
            <TextView
                android:id="@+id/hatchnum_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dip"
                android:gravity="right"
                android:text="123123"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="8dip"
                android:text="@string/holdcapacity"
                android:textColor="@color/black_33"
                android:textSize="@dimen/main_text_size" />
            <TextView
                android:id="@+id/holdcapacity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dip"
                android:gravity="right"
                android:text="123123"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="8dip"
                android:text="@string/hatchsize"
                android:textColor="@color/black_33"
                android:textSize="@dimen/main_text_size" />
            <TextView
                android:id="@+id/hatchsize_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dip"
                android:gravity="right"
                android:text="123123"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size" />
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
</LinearLayout>